--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
-    "angularfire2": "^5.2.1",
+    "angularfire2": "^4.0.0-rc.0",
     "bootstrap": "^4.3.1",
-    "firebase": "^6.2.1",
+    "firebase": "^3.9.0",
     "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
